--- a/css/layout-large.css
+++ b/css/layout-large.css
@@ -155,7 +155,6 @@ html {
     padding: 0px;
     gap: 10px;
 
-    width: 81px;
     height: 33px;
     flex: none;
     flex-grow: 0;
